# asset-tracking-api

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.aws  README.md  deploy.sh  deploy_aws.sh  drill.yml  template.yaml  vpc.template.yaml
.github/workflows/: main.yml
migrations/2020-10-26-155921_create_asset_tags/: down.sql  up.sql
migrations/2020-10-26-160228_create_asset_scanners/: down.sql  up.sql
migrations/2020-10-26-160556_create_locations/: down.sql  up.sql
migrations/2020-10-26-160957_create_rooms/: down.sql  up.sql
migrations/2020-10-26-162809_create_users/: up.sql
migrations/2020-10-26-163000_create_roles/: up.sql
migrations/2020-10-26-163217_create_comments/: down.sql  up.sql
migrations/2020-10-26-163435_create_alerts/: down.sql  up.sql
migrations/2020-10-26-163635_create_contact_events/: up.sql
migrations/2021-02-01-233741_create_assets/: down.sql  up.sql
migrations/2021-02-25-232703_add_asset_id_to_tag/: down.sql  up.sql
migrations/2021-03-10-220926_add_deleted_to_assets/: down.sql  up.sql
migrations/2021-03-10-221228_add_deleted_to_asset_tags/: down.sql  up.sql
migrations/2021-03-10-221355_add_deleted_to_contact_events/: down.sql  up.sql
migrations/2021-04-07-210748_asset_id_optional/: down.sql  up.sql
src/: auth.rs  db.rs  error_handler.rs  main.rs  schema.rs
src/alerts/: model.rs  routes.rs
src/asset_scanners/: model.rs  routes.rs
src/asset_tags/: model.rs  routes.rs
src/assets/: model.rs  routes.rs
src/comments/: model.rs  routes.rs
src/contact_events/: model.rs  routes.rs
src/health/: routes.rs
(+8 files in other folders)
