[package]
name = "qsib_asset"
version = "0.2.0"
authors = ["Jacob Trueb<jtrueb@northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-web-httpauth = "0.5.0"
actix-service = "1.0.6"
actix-rt = "1.1.1"
chrono = { version = "0.4.15", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4.0"
env_logger = "0.8.1"
futures = { version = "0.3.5", features = ["compat"] }
http = "0.2"
lazy_static = "1.4.0"
listenfd = "0.3.3"
log = "0.4.11"
serde = "1.0.116"
serde_json = "1.0.57"
r2d2 = "0.8.9"
uuid = { version = "0.8.1", features = ["serde", "v4"] }